added CRUD operations, Specification to filter